# xcall-multi

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CONTRACTS.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  rust-toolchain.toml
contracts/core-contracts/cw-asset-manager/: Cargo.toml
contracts/core-contracts/cw-asset-manager/schema/: cw-asset-manager.json
contracts/core-contracts/cw-asset-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_configuration.json  response_to_get_net_ids.json  response_to_get_owner.json
contracts/core-contracts/cw-asset-manager/src/: constants.rs  contract.rs  error.rs  external.rs  helpers.rs  integration_test.rs  lib.rs  state.rs
contracts/core-contracts/cw-asset-manager/tests/: deposit_test.rs  setup.rs  x_handle_msg_test.rs
contracts/cosmwasm-vm/cw-integration/: Cargo.toml
contracts/cosmwasm-vm/cw-integration/tests/: setup.rs  test_xcall.rs  test_xcall_connection.rs
contracts/cw-common/: Cargo.toml
contracts/cw-common/src/: asset_manager_msg.rs  data_types.rs  hub_token_msg.rs  lib.rs  networkAddress.rs  network_address.rs  types.rs  x_call_msg.rs  xcall_data_types.rs  xcall_msg.rs
contracts/solana/: Anchor.toml  Cargo.toml  package-lock.json  package.json  ser4Nbop2SKCZLYmtKGBvo8963ceMEEVKjceT9aAZKo.json  tsconfig.json
contracts/solana/libs/rlp/: Cargo.toml
contracts/solana/libs/rlp/src/: impls.rs  rlpin.rs  stream.rs  temp.rs  traits.rs
contracts/solana/libs/xcall-lib/: Cargo.toml
contracts/solana/libs/xcall-lib/src/: account_metadata.rs  error.rs  lib.rs  message_types.rs  network_address.rs  query_account_type.rs  query_account_types.rs  state.rs  xcall_connection_msg.rs  xcall_connection_type.rs  xcall_dapp_msg.rs  xcall_dapp_type.rs  xcall_msg.rs  xcall_type.rs
contracts/solana/libs/xcall-lib/src/message/: call_message.rs  call_message_persisted.rs  call_message_rollback.rs  envelope.rs  mod.rs  msg_trait.rs  msg_type.rs
contracts/solana/programs/centralized-connection/: Cargo.toml
contracts/solana/programs/centralized-connection/src/: constants.rs  contexts.rs  error.rs  event.rs  helper.rs  lib.rs  state.rs
contracts/solana/programs/centralized_connection/: Cargo.toml
contracts/solana/programs/centralized_connection/src/: lib.rs
contracts/solana/programs/cluster-connection/: Cargo.toml
contracts/solana/programs/cluster-connection/src/: contexts.rs  error.rs  helper.rs  lib.rs  state.rs
contracts/solana/programs/mock-dapp/: Cargo.toml
contracts/solana/programs/mock-dapp-multi/: Cargo.toml
contracts/solana/programs/mock-dapp-multi/src/: constants.rs  error.rs  event.rs  helpers.rs  lib.rs  state.rs  xcall.rs
contracts/solana/programs/mock-dapp/src/: lib.rs
contracts/solana/programs/xcall/: Cargo.toml
contracts/solana/programs/xcall/src/: assertion.rs  connection.rs  constants.rs  dapp.rs  error.rs  event.rs  helper.rs  lib.rs  state.rs
contracts/solana/scripts/: index.ts  index.ts.bak  initialize_centralized.ts  initialize_mock_dapp_multi.ts  initialize_xcall.ts  mock_dapp_add_connection.ts  set_xcall_admin.ts
contracts/solana/scripts/centralized-connection/: initialize.ts  setup.ts
contracts/solana/scripts/mock-dapp-multi/: add-connection.ts  initialize.ts  setup.ts
contracts/solana/scripts/utils/: index.ts  transaction.ts
contracts/solana/scripts/xcall/: initialize.ts  set-admin.ts  set-protocol-fee-handler.ts  set-protocol-fee.ts  setup.ts
contracts/solana/tests/: centralized_connection.ts  xcall.ts
contracts/solana/tests/begin-initialize/: initialize.ts
contracts/solana/tests/centralized-connection/: centralized-connection.ts  setup.ts
contracts/solana/tests/mock-dapp/: mock-dapp.ts
contracts/solana/tests/mock-dapp-multi/: mock-dapp-multi.ts  send-rollback-message.ts  send_rollback_message.ts  setup.ts
contracts/solana/tests/temp-tests/: account_lookup.ts
contracts/solana/tests/utils/: index.ts  transaction.ts
contracts/solana/tests/xcall/: execute-rollback.ts  execute_call.ts  handle-message.ts  send-message.ts  send_message.ts  setup.ts  xcall.ts
contracts/solana/tests/xcall/types/: envelope.ts  index.ts  message.ts  request.ts  result.ts
contracts/soroban/contracts/centralized-connection/: Cargo.toml
contracts/soroban/contracts/centralized-connection/src/: contract.rs  errors.rs  event.rs  helpers.rs  lib.rs  states.rs  storage.rs  test.rs  types.rs
contracts/soroban/contracts/centralized-connection/wasm/: xcall.wasm
contracts/soroban/contracts/cluster-connection/: Cargo.toml
contracts/soroban/contracts/cluster-connection/src/: contract.rs  errors.rs  helpers.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/soroban/contracts/intent/: Cargo.toml
contracts/soroban/contracts/intent/src/: cancel.rs  connection.rs  contract.rs  error.rs  event.rs  fill.rs  helpers.rs  lib.rs  storage.rs  swap.rs
contracts/soroban/contracts/mock-dapp-multi/: Cargo.toml
contracts/soroban/contracts/mock-dapp-multi/src/: contract.rs  errors.rs  helpers.rs  lib.rs  state.rs  storage.rs  test.rs  types.rs  xcall.rs
contracts/soroban/contracts/xcall/: Cargo.toml
contracts/soroban/contracts/xcall/src/: connection.rs  contract.rs  dapp.rs  errors.rs  event.rs  execute_call.rs  handle_message.rs  helpers.rs  lib.rs  send_message.rs  states.rs  storage.rs  test.rs
contracts/soroban/contracts/xcall/wasm/: centralized_connection.wasm  dapp.wasm
contracts/token-contracts/cw-hub-bnusd/: Cargo.toml
contracts/token-contracts/cw-hub-bnusd/schema/: cw-hub-bnusd.json
contracts/token-contracts/cw-hub-bnusd/schema/raw/: execute.json  instantiate.json
contracts/token-contracts/cw-hub-bnusd/src/: constants.rs  contract.rs  error.rs  events.rs  helpers.rs  lib.rs  msg.rs  state.rs  types.rs
contracts/token-contracts/cw-hub-bnusd/tests/: cross_transfer_test.rs  cw20_flow_test.rs  handle_call_message_test.rs  setup.rs
libraries/rust/common/: Cargo.toml
libraries/rust/common/src/: btpAddress.rs  icallservice.rs  lib.rs  parseAddress.rs  rlpdecode.rs  strings.rs  types.rs
libraries/rust/common/src/rlp/: mod.rs
(+427 files in other folders)
