[workspace]
members = [
#  "contracts/core-contracts/*",
  "contracts/token-contracts/cw-hub-bnusd",
  "contracts/core-contracts/cw-asset-manager"]


[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
debug_print = "1.0.0"
