[workspace]
members = [
    "contracts/cosmwasm-vm/*",
    "contracts/soroban/contracts/*",
    "contracts/soroban/libs/*"
]

[workspace.package]
authors = ["Icon Foundation<foo@icon.foundation>"]
repository = "https://github.com/icon-project/ibc-integration.git"
version="0.2.1"

[workspace.dependencies]
cosmwasm-std = {version="1.5.5",default-features = false,features = ["iterator", "staking"]}
cw-storage-plus = {git="https://github.com/icon-project/cw-storage-plus.git", branch="fix-raw"}
cosmwasm-storage = "1.2.2"
cosmwasm-schema = "1.2.2"
schemars = "0.8.12"
cw2 = "1.0.1"

prost = { version = "0.11.8", default-features = false,features=["prost-derive"]}

serde-json-wasm = {version="0.5.0", default-features = false}
serde_json = "1.0.96"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }

bytes = { version = "1.4.0", default-features = false }
thiserror = { version = "1.0.39" }
hex ={ version = "0.4.3", default-features = false }
debug_print = "1.0.0"
cw-xcall-lib = { path="contracts/cosmwasm-vm/cw-xcall-lib" }
cw-xcall={ path="contracts/cosmwasm-vm/cw-xcall" }
cw-xcall-ibc-connection = { git="https://github.com/icon-project/IBC-Integration.git", branch = "main" }
cw-mock-ibc-core = { git="https://github.com/icon-project/IBC-Integration.git", branch = "main"}
common = { git="https://github.com/icon-project/IBC-Integration.git", branch = "main" }
cw-common={ git="https://github.com/icon-project/IBC-Integration.git", branch = "main" }

cw-mock-dapp = {path="contracts/cosmwasm-vm/cw-mock-dapp"}
cw-mock-dapp-multi = { path="contracts/cosmwasm-vm/cw-mock-dapp-multi"}

soroban-sdk = "21.6.0"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
