[package]
name = "cw-hub-bnusd"
version = "0.1.0"
authors = ["Night Owl <nightowl121@protonmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
cosmwasm-schema = "1.2.6"
cosmwasm-std = "1.2.6"
cosmwasm-storage = "1.2.6"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.40" }
cw20 = { version = "1.0.1", default-features = false }
cw20-base = { version = "1.0.1", features = ["library"] }
bytes = "1.0"
common = { path = "../../../libraries/rust/common" }
cw-common = { path = "../../cw-common" }
hex = "0.4.3"
debug_print = {workspace=true}
# cw20-base = { path = "../../cw20-base" }


[dev-dependencies]
cw-multi-test = "0.16.4"
x-call-mock = { path = "../../mock-contracts/x-call-mock" }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true
