[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
cw20 = { version = "1.0.1", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.156", default-features = false,features = ["derive"] }
hex ={ version = "0.4.3", default-features = false }
cosmwasm-std = { version = "1.2.5", default-features = false }
