[package]
name = "xcall"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xcall"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version="0.30.0", features = ["init-if-needed"]}
rlp = "0.5.2"
hex = "0.4.3"
anyhow = "1.0.82"
