[package]
name = "centralized-connection"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
xcall = { path = "../xcall" }
soroban-xcall-lib = { path = "../../libs/soroban-xcall-lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
