[package]
name = "cluster-connection"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
